--- a/index.html
+++ b/index.html
@@ -30,20 +30,22 @@
 
     <main class="card">
       <div class="pageview">
-        <label for="traffic">100k Pageviews</label>
+        <label for="traffic"
+          ><span class="display--view">100k</span> Pageviews</label
+        >
         <div class="range">
           <div class="bar"><span class="fill"></span></div>
           <input
             type="range"
             min="0"
-            max="100"
-            step="10"
+            max="4"
+            step="1"
             name="traffic"
             id="traffic"
             class="slider"
           />
         </div>
-        <p class="price">$ 14.00 <small>/ month</small></p>
+        <p class="price">$ <span>14.00</span> <small>/ month</small></p>
       </div>
 
       <div class="payment-type">
